[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/online/ui/WebLoginHUD.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 54
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[node name="WebLoginHUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 140.0
margin_top = 317.0
margin_right = 928.0
margin_bottom = 883.0

[node name="InputContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -374.0
margin_top = 347.0
margin_right = 364.0
margin_bottom = 456650.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="InputContainer"]
margin_right = 738.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = "Login up / Login in
"
align = 1

[node name="UsernameContainer" type="GridContainer" parent="InputContainer"]
margin_top = 163.0
margin_right = 738.0
margin_bottom = 229.0
columns = 3

[node name="Label" type="Label" parent="InputContainer/UsernameContainer"]
margin_right = 330.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )
text = "Username: "

[node name="PlaceHolder" type="Label" parent="InputContainer/UsernameContainer"]
margin_left = 334.0
margin_top = 26.0
margin_right = 334.0
margin_bottom = 40.0

[node name="UsernameInput" type="LineEdit" parent="InputContainer/UsernameContainer"]
margin_left = 338.0
margin_right = 738.0
margin_bottom = 66.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 3 )
placeholder_text = "For register"
caret_blink = true
caret_blink_speed = 0.5

[node name="EmailContainer" type="GridContainer" parent="InputContainer"]
margin_top = 233.0
margin_right = 738.0
margin_bottom = 299.0
columns = 3

[node name="Label" type="Label" parent="InputContainer/EmailContainer"]
margin_right = 325.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )
text = "        Email: "

[node name="PlaceHolder" type="Label" parent="InputContainer/EmailContainer"]
margin_left = 329.0
margin_top = 26.0
margin_right = 333.0
margin_bottom = 40.0
text = " "

[node name="EmailInput" type="LineEdit" parent="InputContainer/EmailContainer"]
margin_left = 337.0
margin_right = 737.0
margin_bottom = 66.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 3 )
placeholder_text = "Email Address"
caret_blink = true
caret_blink_speed = 0.5

[node name="PasswordContainer" type="GridContainer" parent="InputContainer"]
margin_top = 303.0
margin_right = 738.0
margin_bottom = 369.0
columns = 3

[node name="Label" type="Label" parent="InputContainer/PasswordContainer"]
margin_right = 321.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )
text = "Password: "

[node name="PlaceHolder" type="Label" parent="InputContainer/PasswordContainer"]
margin_left = 325.0
margin_top = 26.0
margin_right = 333.0
margin_bottom = 40.0
text = "  "

[node name="PasswordInput" type="LineEdit" parent="InputContainer/PasswordContainer"]
margin_left = 337.0
margin_right = 737.0
margin_bottom = 66.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = SubResource( 3 )
secret = true
placeholder_text = "Strong password"
caret_blink = true
caret_blink_speed = 0.5

[node name="PlaceHolder" type="Label" parent="InputContainer"]
margin_top = 373.0
margin_right = 738.0
margin_bottom = 387.0

[node name="PlaceHolder2" type="Label" parent="InputContainer"]
margin_top = 391.0
margin_right = 738.0
margin_bottom = 405.0

[node name="PlaceHolder3" type="Label" parent="InputContainer"]
margin_top = 409.0
margin_right = 738.0
margin_bottom = 423.0

[node name="GridContainer" type="GridContainer" parent="InputContainer"]
margin_top = 427.0
margin_right = 738.0
margin_bottom = 491.0
columns = 4

[node name="PlaceHolder" type="Label" parent="InputContainer/GridContainer"]
margin_top = 25.0
margin_right = 88.0
margin_bottom = 39.0
text = "                      "

[node name="RegisterButton" type="Button" parent="InputContainer/GridContainer"]
margin_left = 92.0
margin_right = 313.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 4 )
text = "Register"

[node name="PlaceHolder2" type="Label" parent="InputContainer/GridContainer"]
margin_left = 317.0
margin_top = 25.0
margin_right = 409.0
margin_bottom = 39.0
text = "                       "

[node name="LoginButton" type="Button" parent="InputContainer/GridContainer"]
margin_left = 413.0
margin_right = 563.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 4 )
text = "Login"

[node name="PasswordConfirm" type="ConfirmationDialog" parent="."]
visible = true
light_mask = 513
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -271.0
margin_top = 36.0
margin_right = -25.0
margin_bottom = 106.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 6 )
window_title = "Ensure your password?"
dialog_autowrap = true

[connection signal="button_down" from="InputContainer/GridContainer/RegisterButton" to="." method="_on_RegisterButton_button_down"]
[connection signal="button_down" from="InputContainer/GridContainer/LoginButton" to="." method="_on_LoginButton_button_down"]
[connection signal="confirmed" from="PasswordConfirm" to="." method="_on_PasswordConfirm_confirmed"]
